# ChangeLog for sys-apps/portage
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.17168 (07 Nov 2010)

  07 Nov 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.17168.ebuild:
  Version bump, matches portage-2.2.0_alpha4

  04 Nov 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.17133.ebuild, -portage-2.2.01.17146.ebuild:
  Undo latest version bump, it has a broken shebang check

*portage-2.2.01.17146 (03 Nov 2010)

  03 Nov 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17086.ebuild, -portage-2.2.01.17133.ebuild,
  +portage-2.2.01.17146.ebuild:
  Version bump, matches portage-2.2.0_alpha3

*portage-2.2.01.17133 (28 Oct 2010)

  28 Oct 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.17133.ebuild:
  Version bump, this version matches portage-2.2.0_alpha2

  26 Oct 2010; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.01.17086.ebuild:
  Drop no longer existing bsd-chflags installation, bug #342711

*portage-2.2.01.17086 (24 Oct 2010)

  24 Oct 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16711.ebuild, -portage-2.2.01.17063.ebuild,
  +portage-2.2.01.17086.ebuild:
  Version bump, improved install_name check for Darwin users, fixes many
  bugs since 2.2.01.16711, hence, supersedes that version, matches
  portage-2.2.0_alpha1

*portage-2.2.01.17063 (23 Oct 2010)

  23 Oct 2010; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.01.16711.ebuild, +portage-2.2.01.17063.ebuild:
  Drop EAPI=2 from 2.2.01.16711, add testing version up-to-date with master

  23 Oct 2010; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.01.16711.ebuild:
  Sync ipc enabling/disabling code from portage-2.2.0_alpha1

*portage-2.2.01.16711 (29 Sep 2010)

  29 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16706.ebuild, +portage-2.2.01.16711.ebuild:
  Bump for preserved-libs on ELF-system fixes

*portage-2.2.01.16706 (29 Sep 2010)
