@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.01.17294 (29 Nov 2010)
+
+  29 Nov 2010; Fabian Groffen <grobian@gentoo.org>
+  +portage-2.2.01.17294.ebuild:
+  Version bump, matches portage-2.2.0_alpha6
+
 *portage-2.2.01.17168 (07 Nov 2010)
 
   07 Nov 2010; Fabian Groffen <grobian@gentoo.org>
